--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body, html {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   color: rgb(0, 0, 0);
   height: 100%;
   width: 100%;
@@ -28,11 +28,7 @@ body, html {
   margin-bottom: 2rem;
 }
 
-.logo {
-  width: 150px;
-  height: auto;
-  margin-bottom: 1rem;
-}
+
 
 .name {
   font-size: 2.5rem;
