--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 }
 
 body, html {
-  margin: 5%;
-  padding: 5%;
+  margin: 0;
+  padding: 0;
   font-family: 'Poppins', sans-serif;
   color: rgb(0, 0, 0);
   height: 100%;
